--- a/Javascript실습/JS교재실습/조건문.html
+++ b/Javascript실습/JS교재실습/조건문.html
@@ -41,7 +41,7 @@
             if(num1 <10 && num2 <10)
                 alert('숫자 2개 모두 10 미만입니다.');
             else
-                alert('조건에 맞는 숫자가 없습니다.');
+                alert('조건에 맞지 않는 숫자가 있습니다.');
             */
 
             /*
@@ -57,8 +57,9 @@
             }
             */
 
-            /*            var memNum = prompt('총 인원을 입력해주세요.');
-            var colNum = prompt('한 줄당 의자 수를 입력해주세요.');
+            /*
+            var memNum = parseInt(prompt('총 인원을 입력해주세요.'));
+            var colNum = parseInt(prompt('한 줄당 의자 수를 입력해주세요.'));
             if (memNum % colNum === 0)
                 rowNum=parseInt(memNum/colNum);
             else
