--- a/Javascript실습/JS교재실습/나이계산.html
+++ b/Javascript실습/JS교재실습/나이계산.html
@@ -7,7 +7,7 @@
     <body>
         <h1>JS연습장</h1>
         <script>
-            var currentyear = 2022;
+            var currentyear = 2022
             var birthyear;
             var age;
             birthyear=prompt("태어난 연도를 입력하세요. (yyyy)","")
